Added rpc methods
